--- a/web-src/index.html
+++ b/web-src/index.html
@@ -2,7 +2,7 @@
 
   <!DOCTYPE html>
   <html lang="en" class="spectrum spectrum--medium spectrum--light">
-  
+
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="https://unpkg.com/@spectrum-css/typography/index.css">
     <link rel="stylesheet" href="index.css">
   <title>milofg</title>
-  <script src="./src/utils.js"></script>
-  <script src="./src/index.js"></script>
+  <script src="./src/utils.js" type="module"></script>
+  <script src="./src/index.js" type="module"></script>
 </head>
 <body>
   <h1>Welcome to milofg!</h1>
