--- a/web-src/index.html
+++ b/web-src/index.html
@@ -1,19 +1,18 @@
-<!-- <license header> -->
+<!DOCTYPE html>
+<html lang="en" class="spectrum spectrum--medium spectrum--light">
 
-  <!DOCTYPE html>
-  <html lang="en" class="spectrum spectrum--medium spectrum--light">
-
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://unpkg.com/@spectrum-css/vars/dist/spectrum-global.css">
-    <link rel="stylesheet" href="https://unpkg.com/@spectrum-css/typography/index.css">
-    <link rel="stylesheet" href="index.css">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://unpkg.com/@spectrum-css/vars/dist/spectrum-global.css">
+  <link rel="stylesheet" href="https://unpkg.com/@spectrum-css/typography/index.css">
+  <link rel="stylesheet" href="index.css">
   <title>milofg</title>
   <script src="./src/utils.js" type="module"></script>
   <script src="./src/index.js" type="module"></script>
 </head>
+
 <body>
   <h1>Welcome to milofg!</h1>
   <div class="spectrum--large spectrum-Typography spectrum-Site">
@@ -41,7 +40,8 @@
     </div>
     <footer>
       <h2>Useful documentation for your app</h2>
-      <a href='https://github.com/AdobeDocs/project-firefly/blob/master/README.md#project-firefly-developer-guide' target='_blank'>
+      <a href='https://github.com/AdobeDocs/project-firefly/blob/master/README.md#project-firefly-developer-guide'
+        target='_blank'>
         Adobe Developer App Builder
       </a>
       <a href='https://github.com/adobe/aio-sdk#adobeaio-sdk' target='_blank'>
@@ -56,4 +56,5 @@
     </footer>
   </div>
 </body>
+
 </html>
